<resources>
    <string name="app_name">My Application</string>
    <string name="notification">Notifications</string>
    <string name="header_title">Pretium enim at urna feugiat aliquet sit.</string>
    <string name="subtitle">Tellus amet sed nulla feugiat augue tincidunt est pellentesque tellus. Elit aliquet tellus at a euismod.</string>
    <string name="details">Details</string>
    <string name="first_name">First name:</string>
    <string name="name"> Jane</string>
    <string name="last_name">Last name:</string>
    <string name="cooper">Cooper</string>
    <string name="email">Email:</string>
    <string name="email_input">janecooper@gmail.com</string>
    <string name="phone_number">Phone number:</string>
    <string name="phone_no">+1 123 789 654</string>
    <string name="eventtype">EventType:</string>
    <string name="wedding">Wedding</string>
    <string name="venue">Venue:</string>
    <string name="outdoor">Outdoor Venue</string>
    <string name="venue_start_date_time"><![CDATA[Venue start date & time:]]></string>
    <string name="start_date">15/02/2023,10:00 AM</string>
    <string name="venue_end_date_time"><![CDATA[Venue end date & time:]]></string>
    <string name="end_date">20/02/2023,12:00 PM</string>
    <string name="guestlist">20-100 Guests</string>
    <string name="no_guest">Number of guests:</string>
    <string name="tv_additional_amenities">Additional amenities needed:</string>
    <string name="parking">Parking</string>
    <string name="linen_tabelware"><![CDATA[Linen & Tabelware]]></string>
    <string name="on_site_catering">On-site Catering</string>
    <string name="message">Message:\nCopy Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_message">Message</string>
    <string name="Name">Enter Name Here</string>
    <string name="register_here">Register Here!</string>
    <string name="Age">Enter Age here</string>
    <string name="Dob">Enter the dob</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="notesapp">Notesapp</string>
    <string name="enter_topic">Enter Topic</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">Add</string>
    <string name="tv_topic">topic</string>
    <string name="tv_description">description</string>
    <string name="timestamp">Timestamp</string>
    <string name="timeformate">dd MMM,yyyy - HH:mm</string>
    <string name="update">Update</string>
    <string name="inserted">note added</string>
    <string name="error">something went wrong!</string>
    <string name="Remove">Note Deleted</string>
    <string name="description">Please enter the Description</string>
    <string name="topic">Please enter the topic</string>
    <string name="note_update">Note updated</string>

</resources>